# utbots_dependencies

./: CMakeLists.txt  README.md  package.xml
generic_msgs/: CMakeLists.txt  package.xml
utbots_actions/: CMakeLists.txt  package.xml
utbots_actions/action/: Extract3DPoint.action  InterpretNLU.action  MPPose.action  NewFace.action  Recognition.action  Train.action  YOLODetection.action
utbots_actions/action/vision_action/: Extract3DPoint.action  MPPose.action  YOLODetection.action  new_face.action  recognition.action  train.action
utbots_actions/action/voice_action/: InterpretNLU.action
utbots_msgs/: CMakeLists.txt  package.xml
utbots_msgs/msg/: BoundingBox.msg  BoundingBoxes.msg  Object.msg  ObjectArray.msg  PersonArray.msg  PointArray.msg  Skeleton2d.msg  StringArray.msg
utbots_srvs/: CMakeLists.txt  package.xml
vision_msgs/msg/: BoundingBox.msg  Object.msg
